Fix vertical alignment for bordered inline-blocks

--- a/public/kingdom-L1.css
+++ b/public/kingdom-L1.css
@@ -2187,6 +2187,7 @@ button,
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -1px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2241,6 +2242,7 @@ button,
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2291,6 +2293,7 @@ button,
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2340,6 +2343,7 @@ button,
   border-right-width: var(--border-right-width);
   position: initial;
   top: initial;
+  vertical-align: initial;
   margin-bottom: 0px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
