--- a/public/kingdom-L4.css
+++ b/public/kingdom-L4.css
@@ -2355,6 +2355,7 @@ h6 * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -1px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2409,6 +2410,7 @@ h6 * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2459,6 +2461,7 @@ h6 * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2508,6 +2511,7 @@ h6 * {
   border-right-width: var(--border-right-width);
   position: initial;
   top: initial;
+  vertical-align: initial;
   margin-bottom: 0px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2548,7 +2552,6 @@ select {
 }
 
 textarea {
-  vertical-align: top;
   border-top-width: 1px;
   --border-top-width: 1px;
   border-top-width: var(--border-top-width);
@@ -2564,6 +2567,7 @@ textarea {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
   padding-top: 0;
