--- a/public/kingdom-forms-L1.css
+++ b/public/kingdom-forms-L1.css
@@ -2188,6 +2188,7 @@ label:only-of-type ~ * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -1px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2242,6 +2243,7 @@ label:only-of-type ~ * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2292,6 +2294,7 @@ label:only-of-type ~ * {
   position: relative;
   top: -1px;
   top: calc(0px - var(--border-top-width));
+  vertical-align: top;
   margin-bottom: -2px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
@@ -2341,6 +2344,7 @@ label:only-of-type ~ * {
   border-right-width: var(--border-right-width);
   position: initial;
   top: initial;
+  vertical-align: initial;
   margin-bottom: 0px;
   margin-bottom: calc(0px - var(--border-top-width, 0px) - var(--border-bottom-width, 0px));
 }
