--- a/src/_L3-rhythm.scss
+++ b/src/_L3-rhythm.scss
@@ -44,7 +44,6 @@ input, button, select {
 }
 
 textarea {
-  vertical-align: top;
   @include set-border($width: $input-border-width);
   padding-top: 0;
   padding-bottom: 0;
