--- a/src/modules/_borders.scss
+++ b/src/modules/_borders.scss
@@ -17,9 +17,11 @@ $body-line-height-factor: 1.5 !default;
       position: relative;
       top: -$width;
       top: calc(0px - var(--border-top-width));
+      vertical-align: top;
     } @else {
       position: initial;
       top: initial;
+      vertical-align: initial;
     }
   }
 
